--- a/contracts/dao/Cargo.toml
+++ b/contracts/dao/Cargo.toml
@@ -1,16 +1,22 @@
 [package]
 name = "dao"
 version = "0.1.0"
-authors = ["Stake Technologies <devops@stake.co.jp>"]
+authors = ["Ibrokhim Kholmatov"]
 edition = "2021"
 
 [dependencies]
 ink = { version = "4.2.1", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
 
-openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.1.1", default-features = false }
+# Include brush as a dependency and enable default implementation for PSP22 via brush feature
+openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22"] }
+
+governance_token = { path = "../governance-token", default-features = false, features = ["ink-as-dependency"] }
+
+[dev-dependencies]
+ink_e2e = "4.2.0"
 
 [lib]
 path = "lib.rs"
@@ -21,12 +27,6 @@ std = [
     "ink/std",
     "scale/std",
     "scale-info/std",
-    "openbrush/std",
 ]
 ink-as-dependency = []
-
-[profile.dev]
-overflow-checks = false
-
-[profile.release]
-overflow-checks = false
+e2e-tests = []
