resolving issues with cargo contract build

--- a/contracts/dao/Cargo.toml
+++ b/contracts/dao/Cargo.toml
@@ -13,7 +13,7 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 # Include brush as a dependency and enable default implementation for PSP22 via brush feature
 openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22"] }
 
-governance_token = { path = "../governance-token", default-features = false, features = ["ink-as-dependency"] }
+governance-token = { path = "../governance-token", default-features = false, features = ["ink-as-dependency"] }
 
 [dev-dependencies]
 ink_e2e = "4.2.0"
