--- a/contracts/governance-token/Cargo.toml
+++ b/contracts/governance-token/Cargo.toml
@@ -17,7 +17,6 @@ openbrush = { tag = "4.0.0-beta", git = "https://github.com/Brushfam/openbrush-c
 ink_e2e = "4.2.0"
 
 [lib]
-name = "governance_token"
 path = "lib.rs"
 
 [features]
@@ -31,3 +30,9 @@ std = [
 ]
 ink-as-dependency = []
 e2e-tests = []
+
+[profile.dev]
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
