added new test case for vote function in dao, applyed try_invoke in cross contract calling, testing run cargo fmt --all command

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -58,4 +58,7 @@ jobs:
       run: swanky contract compile --all -v
 
     - name: Test contracts
-      run: cargo test --manifest-path contracts/dao/Cargo.toml contracts/governance-token/Cargo.toml
+      run: cargo test 
+
+    - name: Format code
+      run: cargo fmt --all
